--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "bunyan": "^1.8.10",
     "bunyan-format": "^0.2.1",
     "eslint": "^4.2.0",
+    "github-graphql-client": "^1.0.0",
     "lodash": "^4.17.4",
     "pretty-ms": "^2.1.0"
   }
