--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
   "dependencies": {
     "bunyan": "^1.8.10",
     "bunyan-format": "^0.2.1",
+    "chalk": "^2.1.0",
     "eslint": "^4.2.0",
     "github-graphql-client": "^1.0.0",
     "lodash": "^4.17.4",
